crates/figue/tests/integration/snapshots/main__integration__ariadne__ariadne_missing_argument.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
Error: missing required argument
   ╭─[ <suggestion>:1:23 ]
   │
 1 │ main-138217976bbdb088 --required-field <required-field>
   │                       ────────────────┬────────────────  
   │                                       ╰────────────────── missing required argument
───╯
